cardDisplay height on mobile fixed

--- a/client/src/Components/User/User.css
+++ b/client/src/Components/User/User.css
@@ -9,7 +9,7 @@
 @media only screen and (max-width: 768px) {
 	.user {
 		width: 320px;
-		height: 460px;
+		height: 470px;
 		margin: auto;
 	}
 	.bbb {
@@ -29,7 +29,7 @@
 @media only screen and (min-width: 768px) {
 	.user {
 		width: 350px;
-		height: 450px;
+		height: 460px;
 		margin: auto;
 	}
 	.bbb {
